syntax = "proto3";

package model;

import "protos/model/window.proto";

// Sets the golang package for the protobuf generated code
option go_package = "github.com/opencost/opencost/core/pkg/model/pb";

// LabelsResponse is a grouping of LabelSets for a specific window for a type of label grouped by their source.
message LabelsResponse {
  // The type of labels in the set (e.g. account_labels, namespace_labels)
  string type = 1;
  // type dependent identifier for the grouping of labels most likely the cluster id or the configuration key, used
  // as part of the export path
  string group_id = 2;

  // The window for the label sets
  model.Window window = 3;

  // Mapping of LabelSets for individual items by a unique identifier
  map<string, LabelSet> label_sets = 4;
}

// LabelSet is an internal message meant to enable nesting maps
message LabelSet {
  map<string, string> labels = 1;
}